// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`cli > command > "daily" should display a graph 1`] = `
"
Date        Valeur (Wh) Graphique                     
2026-04-01  9271        ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■"
`;

exports[`cli > command > "dailyprod" should display a graph 1`] = `
"
Date        Valeur (Wh) Graphique                     
2026-04-01  1882        ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■"
`;

exports[`cli > command > "loadcurve" should display a graph 1`] = `
"
Date                 Valeur (W) Graphique                     
2026-04-01 00:30:00  110        ■■
2026-04-01 01:00:00  408        ■■■■■
2026-04-01 01:30:00  112        ■■
2026-04-01 02:00:00  372        ■■■■■
2026-04-01 02:30:00  138        ■■
2026-04-01 03:00:00  190        ■■■
2026-04-01 03:30:00  270        ■■■
2026-04-01 04:00:00  140        ■■
2026-04-01 04:30:00  2720       ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■
2026-04-01 05:00:00  2092       ■■■■■■■■■■■■■■■■■■■■■■■■
2026-04-01 05:30:00  1396       ■■■■■■■■■■■■■■■■
2026-04-01 06:00:00  1216       ■■■■■■■■■■■■■■
2026-04-01 06:30:00  768        ■■■■■■■■■
2026-04-01 07:00:00  516        ■■■■■■
2026-04-01 07:30:00  246        ■■■
2026-04-01 08:00:00  352        ■■■■
2026-04-01 08:30:00  204        ■■■
2026-04-01 09:00:00  712        ■■■■■■■■
2026-04-01 09:30:00  1062       ■■■■■■■■■■■■
2026-04-01 10:00:00  294        ■■■■
2026-04-01 10:30:00  236        ■■■
2026-04-01 11:00:00  170        ■■
2026-04-01 11:30:00  208        ■■■
2026-04-01 12:00:00  196        ■■■
2026-04-01 12:30:00  178        ■■
2026-04-01 13:00:00  822        ■■■■■■■■■■
2026-04-01 13:30:00  264        ■■■
2026-04-01 14:00:00  146        ■■
2026-04-01 14:30:00  248        ■■■
2026-04-01 15:00:00  190        ■■■
2026-04-01 15:30:00  190        ■■■
2026-04-01 16:00:00  226        ■■■
2026-04-01 16:30:00  160        ■■
2026-04-01 17:00:00  210        ■■■
2026-04-01 17:30:00  182        ■■■
2026-04-01 18:00:00  154        ■■
2026-04-01 18:30:00  182        ■■■
2026-04-01 19:00:00  92         ■■
2026-04-01 19:30:00  238        ■■■
2026-04-01 20:00:00  86         ■
2026-04-01 20:30:00  100        ■■
2026-04-01 21:00:00  126        ■■
2026-04-01 21:30:00  82         ■
2026-04-01 22:00:00  128        ■■
2026-04-01 22:30:00  98         ■■
2026-04-01 23:00:00  84         ■
2026-04-01 23:30:00  128        ■■
2026-04-02 00:00:00  100        ■■"
`;

exports[`cli > command > "loadcurveprod" should display a graph 1`] = `
"
Date                 Valeur (W) Graphique                     
2026-04-01 00:30:00  0
2026-04-01 01:00:00  0
2026-04-01 01:30:00  0
2026-04-01 02:00:00  0
2026-04-01 02:30:00  0
2026-04-01 03:00:00  0
2026-04-01 03:30:00  0
2026-04-01 04:00:00  0
2026-04-01 04:30:00  0
2026-04-01 05:00:00  0
2026-04-01 05:30:00  0
2026-04-01 06:00:00  0
2026-04-01 06:30:00  0
2026-04-01 07:00:00  0
2026-04-01 07:30:00  0
2026-04-01 08:00:00  0
2026-04-01 08:30:00  0
2026-04-01 09:00:00  0
2026-04-01 09:30:00  2          ■
2026-04-01 10:00:00  88         ■■■■■
2026-04-01 10:30:00  30         ■■
2026-04-01 11:00:00  78         ■■■■■
2026-04-01 11:30:00  336        ■■■■■■■■■■■■■■■■■■
2026-04-01 12:00:00  28         ■■
2026-04-01 12:30:00  28         ■■
2026-04-01 13:00:00  40         ■■■
2026-04-01 13:30:00  0
2026-04-01 14:00:00  256        ■■■■■■■■■■■■■■
2026-04-01 14:30:00  540        ■■■■■■■■■■■■■■■■■■■■■■■■■■■■
2026-04-01 15:00:00  390        ■■■■■■■■■■■■■■■■■■■■■
2026-04-01 15:30:00  584        ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■
2026-04-01 16:00:00  410        ■■■■■■■■■■■■■■■■■■■■■■
2026-04-01 16:30:00  270        ■■■■■■■■■■■■■■
2026-04-01 17:00:00  308        ■■■■■■■■■■■■■■■■
2026-04-01 17:30:00  220        ■■■■■■■■■■■■
2026-04-01 18:00:00  112        ■■■■■■
2026-04-01 18:30:00  38         ■■
2026-04-01 19:00:00  6          ■
2026-04-01 19:30:00  0
2026-04-01 20:00:00  0
2026-04-01 20:30:00  0
2026-04-01 21:00:00  0
2026-04-01 21:30:00  0
2026-04-01 22:00:00  0
2026-04-01 22:30:00  0
2026-04-01 23:00:00  0
2026-04-01 23:30:00  0
2026-04-02 00:00:00  0"
`;

exports[`cli > command > "maxpower" should display a graph 1`] = `
"
Date                 Valeur (VA) Graphique                     
2026-04-01 04:18:59  3533        ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■"
`;

exports[`cli > daily command > should create directory and write to file when output flag is used  1`] = `
"{
  "idPrm": "11111111111111",
  "etapeMetier": "BRUT",
  "periode": {
    "dateDebut": "2026-04-01",
    "dateFin": "2026-04-02"
  },
  "typeValeur": "GLOBALE",
  "modeCalcul": "DIFF.INDEX",
  "pas": "P1D",
  "grandeur": [
    {
      "grandeurMetier": "CONS",
      "grandeurPhysique": "EA",
      "unite": "Wh",
      "points": [
        {
          "v": "9271",
          "d": "2026-04-01"
        }
      ],
      "calendrier": []
    }
  ],
  "contexte": []
}"
`;

exports[`cli > daily command > should output CSV with 2 columns when --format=csv 1`] = `
"
Date,Valeur (Wh)
2026-04-01,9271"
`;

exports[`cli > daily command > should output JSON when --format=json 1`] = `
"
{
  "idPrm": "11111111111111",
  "etapeMetier": "BRUT",
  "periode": {
    "dateDebut": "2026-04-01",
    "dateFin": "2026-04-02"
  },
  "typeValeur": "GLOBALE",
  "modeCalcul": "DIFF.INDEX",
  "pas": "P1D",
  "grandeur": [
    {
      "grandeurMetier": "CONS",
      "grandeurPhysique": "EA",
      "unite": "Wh",
      "points": [
        {
          "v": "9271",
          "d": "2026-04-01"
        }
      ],
      "calendrier": []
    }
  ],
  "contexte": []
}"
`;
